gedcomfy/tests/snapshots/tests__kdl_error@utf8_assumedversion_malformed.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 7.0\r\n0 TEXT h�3�ré\r\n0 TRLR"
expression: "format!(\"{:?}\", miette::Report::new(err))"
input_file: gedcomfy/tests/encoding_inputs/utf8_assumedversion_malformed.ged
---
gedcom::encoding::invalid_data

  × GEDCOM file contained data which was invalid in the detected encoding
  ├─▶ Invalid data for encoding UTF-8
  ╰─▶ invalid utf-8 sequence of 1 bytes from index 36

Advice: 
  ☞ this encoding was used because it is required by GEDCOM version 7.0
