gedcomfy/tests/snapshots/tests__kdl_error@utf8_bom_malformed.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "﻿0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR UTF-8\r\n0 MALFORMED hê�ér\r\n"
expression: "format!(\"{:?}\", miette::Report::new(err))"
input_file: gedcomfy/tests/encoding_inputs/utf8_bom_malformed.ged
---
gedcom::encoding::invalid_data

  × GEDCOM file contained data which was invalid in the detected encoding
  ├─▶ Invalid data for encoding UTF-8
  ╰─▶ invalid utf-8 sequence of 1 bytes from index 59

Advice: gedcom::encoding_reason::bom

  ☞ this encoding was detected from the byte-order mark (BOM) at the start of the file
