gedcomfy/tests/snapshots/tests__kdl_error@v7_encoding_mismatch.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "��0\u0000 \u0000H\u0000E\u0000A\u0000D\u0000\r\u0000\n\u00001\u0000 \u0000G\u0000E\u0000D\u0000C\u0000\r\u0000\n\u00002\u0000 \u0000V\u0000E\u0000R\u0000S\u0000 \u00007\u0000.\u00000\u0000\r\u0000\n\u00000\u0000 \u0000T\u0000R\u0000L\u0000R\u0000\r\u0000\n\u0000"
expression: "format!(\"{:?}\", miette::Report::new(err))"
input_file: gedcomfy/tests/encoding_inputs/v7_encoding_mismatch.ged
---
gedcom::encoding::version_encoding_mismatch

  × Unable to determine encoding of GEDCOM file
  ╰─▶ GEDCOM version 7.0 requires the encoding to be UTF-8, but the file encoding was determined to be UTF-16 (little-endian)

Advice: gedcom::encoding_reason::bom

  ☞ this encoding was detected from the byte-order mark (BOM) at the start of the file
